[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VisibilityGraph"
version = "0.1.0"
description = "make visibility graph from time series data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "pyunicorn>=0.8.0",
    "scikit-learn>=1.6.1",
    "torch-geometric>=2.6.1",
    "torch>=2.5.1",
    "xgboost>=2.1.3",
]



[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-dir]
"" = "src" ## this is to source data from package, this this data would be within this source folder



